--- a/package.json
+++ b/package.json
@@ -18,8 +18,17 @@
   },
   "homepage": "https://github.com/vikandagonzales/veil-backend#readme",
   "dependencies": {
+    "bcrypt-as-promised": "^1.1.0",
+    "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "dotenv": "^5.0.1",
+    "express": "^4.16.3",
+    "jsonwebtoken": "^8.2.1",
     "knex": "^0.14.6",
+    "morgan": "^1.9.0",
     "pg": "^7.4.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.3"
   }
 }
