--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "knex": "knex",
-    "dev": "nodemon src/app.js",
-    "start": "node src/app.js"
+    "dev": "nodemon ./app.js",
+    "start": "node ./app.js"
   },
   "repository": {
     "type": "git",
@@ -35,7 +35,8 @@
     "jsonwebtoken": "^8.2.1",
     "knex": "^0.14.6",
     "morgan": "^1.9.0",
-    "pg": "^7.4.1"
+    "pg": "^7.4.1",
+    "shortid": "^2.2.8"
   },
   "devDependencies": {
     "nodemon": "^1.17.3"
